add readme and minor fix

--- a/API/views/index.pug
+++ b/API/views/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
  head
-   title Pug Button
+   title Quick Book
    style. 
     .btn {
       background-color: #4CAF50; /* Green */
