--- a/API/views/revenue.pug
+++ b/API/views/revenue.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
  head
-   title Pug Button
+   title Quick Book
    style.
     .form-container {
         width: 500px;
